kubernetes/redwood-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  containers:
  - name: web-pod-container
    image: ghcr.io/heremias/redwoodjs-app-web-main:latest
  imagePullSecrets:
  - name: ghcred
