kubernetes/redwood.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: ghcr.io/heremias/redwoodjs-app-api-main:latest
  imagePullSecrets:
  - name: redwood
