kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: app
spec:
  rules:
      - http:
          paths:
            - backend:
                serviceName: web
                servicePort: 8910
              path: /
            - backend:
                serviceName: api
                servicePort: 8911
            path: /api
